# opengl-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
resources/shaders/: shader.frag  shader.vert
scripts/: aio.bat  build.bat  configure.bat  run.bat
source/: application.cpp  application.h  camera.cpp  camera.h  context.cpp  context.h  defines.h  input.h  main.cpp  pch.h  renderer.cpp  renderer.h  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h  timer.h  utils.h  vertexarray.cpp  vertexarray.h  window.cpp  window.h
source/engine/: application.cpp  application.h  defines.h  main.cpp
source/engine/core/: singleton.h
source/engine/events/: event.h  eventbus.cpp
source/engine/input/: input.h  keys.h  mousebuttons.h
source/engine/math/: mat.h  math_constants.h  math_functions.h  oglr_math.h  oglr_math_helper.h  vec.h
source/engine/memory/: allocator.cpp  allocator.h
source/engine/renderer/: camera.cpp  camera.h  context.cpp  context.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h  vertex_array.cpp  vertexarray.h  window.cpp  window.h
source/engine/utilities/: asserts.h  log.h  profiler.h  singleton.h  timer.h  utils.h
source/engine/utils/: log.h  singleton.h
source/events/: eventbus.cpp  eventbus.h
source/input/: input.h  keys.cpp  keys.h
source/platform/platformwin32/: windowwin32.cpp  windowwin32.h
source/platform/windows/: window_win32.cpp  window_win32.h
source/renderer/: camera.cpp  context.cpp  renderer.cpp  shaderprogram.cpp  texture.cpp  texture.h  vertexarray.cpp
source/utils/: utils.h
source/window/: window.cpp  window.h
src/: context.cpp  context.h  main.cpp  shader.frag  shader.vert  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h  utils.h  vertexarray.cpp  vertexarray.h  window.cpp  window.h
